<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.admin.NewItemFragment">


    <Switch
        android:id="@+id/switch_highlight"
        android:layout_width="48dp"
        android:layout_height="25dp"
        android:layout_marginTop="40dp"
        android:checked="false"
        android:thumbTint="@color/GreenBT_Order"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout7"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/candarabold"
        android:text="@string/newItem"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        app:hintEnabled="false"
        android:background="@drawable/transparent_background"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
        app:passwordToggleEnabled="false">

        <EditText
            android:id="@+id/add_foodTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_backgroundedittext"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/timeToPrepare"
            android:inputType="number"
            android:theme="@style/EditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="47dp"
        android:background="@drawable/transparent_background"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView50"
        app:passwordToggleEnabled="false">

        <EditText
            android:id="@+id/add_foodName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|clip_vertical|top"
            android:background="@drawable/login_backgroundedittext"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:theme="@style/EditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout7"
        app:hintEnabled="false"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/transparent_background"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
        app:passwordToggleEnabled="false">

        <EditText
            android:id="@+id/add_foodPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_backgroundedittext"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:theme="@style/EditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_newItem"
        style="@style/Button"
        android:layout_width="370dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="40dp"
        android:elevation="10dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highlight"
        android:theme="@style/SubtitleLightStyle"
        app:layout_constraintBottom_toBottomOf="@+id/switch_highlight"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout7"
        app:layout_constraintTop_toTopOf="@+id/switch_highlight" />

</androidx.constraintlayout.widget.ConstraintLayout>