<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.home.DeskFragment">


    <Button
        android:id="@+id/table_backBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        app:icon="@drawable/backbtn"
        app:iconTint="@color/text"
        app:layout_constraintBottom_toBottomOf="@+id/textView48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView48" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="38dp"
        android:text="@string/table"
        android:textAlignment="center"
        android:textSize="16dp"
        android:theme="@style/NamePages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        style="@style/Button"
        android:layout_width="370dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="40dp"
        android:elevation="10dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="370dp"
        android:layout_height="550dp"
        android:layout_marginTop="72dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="30dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView48">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/deskViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/deskTabs"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_tabsdesk"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView48"
        app:tabIconTint="@color/black"
        app:tabIndicator="@drawable/transparent_background"
        app:tabIndicatorColor="@android:color/transparent"
        app:tabIndicatorFullWidth="false"
        app:tabTextAppearance="@style/SubtitleRegularStyle">

        <com.google.android.material.tabs.TabItem
            style="@style/SubtitleRegularStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now" />

        <com.google.android.material.tabs.TabItem
            style="@style/SubtitleRegularStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book" />
    </com.google.android.material.tabs.TabLayout>
</androidx.constraintlayout.widget.ConstraintLayout>