<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageMenusActivity">

    <TextView
        android:id="@+id/textView56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="46dp"
        android:fontFamily="@font/candarabold"
        android:text="@string/Edit_Menus"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/productsEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView56"
        app:srcCompat="@drawable/retangulo138"></ImageView>

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productsEdit"
        app:srcCompat="@drawable/retangulo_1">

    </ImageView>

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        app:srcCompat="@drawable/retangulo141">

    </ImageView>

    <TextView
        android:id="@+id/productsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginRight="dp"
        android:textAllCaps="true"
        android:textSize="30dp"
        android:fontFamily="@font/candarabold"
        android:textColor="@color/white"
        android:text="@string/AddProducts"
        app:layout_constraintBottom_toBottomOf="@+id/productsEdit"
        app:layout_constraintEnd_toEndOf="@+id/productsEdit"
        app:layout_constraintStart_toStartOf="@+id/productsEdit"
        app:layout_constraintTop_toTopOf="@+id/productsEdit" />

    <TextView
        android:id="@+id/textView58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"

        android:textAllCaps="true"
        android:textSize="30dp"
        android:fontFamily="@font/candarabold"
        android:textColor="@color/white"
        android:text="@string/EditProduct"
        app:layout_constraintBottom_toBottomOf="@+id/imageView13"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="@+id/imageView13" />

    <TextView
        android:id="@+id/textView59"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:textAllCaps="true"
        android:textSize="30dp"
        android:fontFamily="@font/candarabold"
        android:textColor="@color/white"
        android:text="@string/DeleteProduct"
        app:layout_constraintBottom_toBottomOf="@+id/imageView21"
        app:layout_constraintEnd_toEndOf="@+id/imageView21"
        app:layout_constraintStart_toStartOf="@+id/imageView21"
        app:layout_constraintTop_toTopOf="@+id/imageView21" />

</androidx.constraintlayout.widget.ConstraintLayout>