<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogEdit"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/radioGroupNewCatSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/radioButtonSub"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/categorySubEditText"
            app:layout_constraintTop_toBottomOf="@+id/titleCategorySubDialog">

            <RadioButton
                android:id="@+id/radioButtonCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="@font/segoeuil"
                android:text="@string/Categories"
                android:visibility="visible" />

            <RadioButton
                android:id="@+id/radioButtonSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:checked="false"
                android:fontFamily="@font/segoeuil"
                android:text="@string/subCategories" />
        </RadioGroup>

        <ImageButton
            android:id="@+id/closeCategorySub"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/transparent_background"
            android:src="@drawable/ic_remove"
            app:layout_constraintBottom_toBottomOf="@+id/titleCategorySubDialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/titleCategorySubDialog" />

        <TextView
            android:id="@+id/titleCategorySubDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAppearance="@style/SubtitleRegularStyle"
            android:textColor="@color/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/categorySubEditText"
            style="@style/EditText"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/login_backgroundedittext"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingLeft="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleCategorySubDialog" />

        <TextView
            android:id="@+id/submitCategorySub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_marginBottom="20dp"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="@color/GreenBT_Order"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/categorySubEditText"
            app:layout_constraintTop_toBottomOf="@+id/categorySubEditText"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/cancelCategorySub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="20dp"
            android:text="@android:string/cancel"
            android:textAllCaps="true"
            android:textColor="#880D1C"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/categorySubEditText"
            app:layout_constraintTop_toBottomOf="@+id/categorySubEditText"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>